--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -78,8 +78,7 @@
     .white-zone-layout {
         display: block !important;
         flex-direction: column;
-		
-        gap: 15px;
+        gap: 25px;
         margin-left: 0;
     }
 
@@ -92,7 +91,12 @@
         padding: 0 !important;
         margin-left: 25px !important;
         margin-right: 0 !important;
+        margin-bottom: 25px !important;
         border-bottom: none !important;
+    }
+    
+    .white-zone-right {
+        margin-bottom: 0 !important;
     }
 
     .white-zone-center {
